--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,29 +1,35 @@
-separator=false
-separator_block_width=3
-border_top=2
+separator=true
+separator_block_width=10
+border_top=0
 border_left=0
 border_right=0
 border_bottom=0
 
-
 [updates]
 command=$HOME/.scripts/updates.sh
-interval=3600
+interval=1
 signal=2
 urgent=true
 #border=#aa03ae
 
 [spotify]
+label=
 command=echo $(playerctl metadata title) $(playerctl metadata artist)
 interval=5
 separator=false
 #border=#81b71a
 
 
+[brightness]
+command=$HOME/.scripts/brightness
+label=
+interval=1
+
 
 [volume]
 label=  
-command=amixer get Master | grep -E -o '[0-9]{1,3}?%' | head -1
+#command=amixer get Master | grep -E -o '[0-9]{1,3}?%' | head -1
+command=$HOME/.scripts/audio
 interval=once
 signal=1
 markup=pango
@@ -35,29 +41,25 @@ command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
 interval=1
 #border=#27ae60
 
-
 [battery]
 label=
 command=$HOME/.scripts/battery.sh
 interval=5
-#border=#f1c40f
+border=#f1c40f
 
-#[memory]
-#label=
-#command=$HOME/.scripts/memory.sh
-#interval=5
+[memory]
+label=
+command=$HOME/.scripts/memory.sh
+interval=5
 #border=#3983aa
 
-#[cpu]
-#label=CPU
-#command=$HOME/.scripts/cpu
-#interval=1
-#border=#d35400
-
 [time]
-label=  
+label= 
 command=echo "`date +'%a %d %b'` <b>`date +'%T'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
 interval=1
 markup=pango
 #border=#27ae60
-separator_block_width=0
+
+[space]
+interval=once
+command=echo ">"
