Changed browser to opera

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -4,10 +4,10 @@ no-dock-shadow = true;
 no-dnd-shadow = true;
 clear-shadow = true;
 
-shadow-radius = 20;
-shadow-offset-x = -10;
+shadow-radius = 10;
+shadow-offset-x = -5;
 shadow-offset-y = 0;
-shadow-opacity = 0.8;
+shadow-opacity = 0.9;
 shadow-red = 0.11;
 shadow-green = 0.12;
 shadow-blue = 0.13;
@@ -26,12 +26,12 @@ inactive-opacity = 0.99;     # Default opacity of inactive windows. (0.0 - 1.0)
 # frame-opacity = 0.8;      # Opacity of window titlebars and borders. (0.1 - 1.0)
 # inactive-opacity-override = true; # Let inactive opacity set by 'inactive-opacity' overrides
           # value of _NET_WM_OPACITY. Bad choice.
-alpha-step = 0.06;      # XRender backend: Step size for alpha pictures. Increasing
+alpha-step = 0.02;      # XRender backend: Step size for alpha pictures. Increasing
           # it may result in less X resource usage,
           # Yet fading may look bad.
-inactive-dim = 0.1;     # Dim inactive windows. (0.0 - 1.0)
+inactive-dim = 0.05;     # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim-fixed = true;    # Do not let dimness adjust based on window opacity.
-#blur-background = true;   # Blur background of transparent windows.
+blur-background = true;   # Blur background of transparent windows.
           # Bad performance with X Render backend.
           # GLX backend is preferred.
 # blur-background-frame = true;   # Blur background of opaque windows with transparent
@@ -43,8 +43,8 @@ blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
 # Fading
 fading = true;      # Fade windows during opacity changes.
 # fade-delta = 30;    # The time between steps in a fade in milliseconds. (default 10).
-fade-in-step = 0.05;    # Opacity change between steps while fading in. (default 0.028).
-fade-out-step = 0.05;   # Opacity change between steps while fading out. (default 0.03).
+fade-in-step = 0.1;    # Opacity change between steps while fading in. (default 0.028).
+fade-out-step = 0.1;   # Opacity change between steps while fading out. (default 0.03).
 # no-fading-openclose = true; # Avoid fade windows in/out when opening/closing.
 fade-exclude = [ "g:e:SMPlayer" ];   # Exclude conditions for fading.
 
