--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,29 +1,35 @@
-separator=true
-separator_block_width=10
+separator=false
+separator_block_width=20
 border_top=0
 border_left=0
 border_right=0
-border_bottom=0
+border_bottom=1
 
 [updates]
 command=$HOME/.scripts/updates.sh
 interval=1
 signal=2
 urgent=true
-#border=#aa03ae
+border=#ff0000
 
 [spotify]
 label=
 command=echo $(playerctl metadata title) $(playerctl metadata artist)
 interval=5
-separator=false
-#border=#81b71a
+border=#000000
 
+[weater]
+instance=3081368
+command=$HOME/.scripts/weather.sh
+interval=60
+signal=10
+border=#000000
 
 [brightness]
 command=$HOME/.scripts/brightness
 label=
 interval=1
+border=#000000
 
 
 [volume]
@@ -33,33 +39,29 @@ command=$HOME/.scripts/audio
 interval=once
 signal=1
 markup=pango
-#border=#3983aa
+border=#000000
 
 [wireless]
 label=  
 command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
 interval=1
-#border=#27ae60
+border=#000000
 
 [battery]
 label=
 command=$HOME/.scripts/battery.sh
-interval=5
-border=#f1c40f
+interval=1
+border=#000000
 
 [memory]
 label=
 command=$HOME/.scripts/memory.sh
-interval=5
-#border=#3983aa
+interval=1
+border=#000000
 
 [time]
 label= 
 command=echo "`date +'%a %d %b'` <b>`date +'%T'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
 interval=1
 markup=pango
-#border=#27ae60
-
-[space]
-interval=once
-command=echo ">"
+border=#000000
