--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -5,6 +5,7 @@ border_left=0
 border_right=0
 border_bottom=1
 
+
 [updates]
 command=$HOME/.scripts/updates.sh
 interval=1
@@ -41,11 +42,11 @@ signal=1
 markup=pango
 border=#000000
 
-[wireless]
-label=  
-command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
-interval=1
-border=#000000
+#[wireless]
+#label=  
+#command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
+#interval=1
+#Yborder=#000000
 
 [battery]
 label=
