--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -29,9 +29,9 @@ border=#000000
 [brightness]
 command=$HOME/.scripts/brightness
 label=
-interval=1
+interval=once
+signal=17
 border=#000000
-
 
 [volume]
 label=  
@@ -51,6 +51,7 @@ border=#000000
 [battery]
 label=
 command=$HOME/.scripts/battery.sh
+markup=pango
 interval=1
 border=#000000
 
