--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -12,15 +12,15 @@
     XF86AudioLowerVolume
 
 # Toggle volume
-"amixer -D pulse set Master 1+ toggle; if [[ -n $(amixer get volnoti-show -s /usr/share/pixmaps/volnoti/display-brightness-symbolic.svg Master | grep 'Front Left:' | grep -o "\[off\]") ]] ; then volnoti-show -m -v; else amixer get Master | egrep -o "([0-9]+)%" | egrep -o "[0-9]+" | xargs -0 volnoti-show; fi && pkill -RTMIN+1 i3blocks"
-  XF86AudioMute
+"amixer set Master toggle; if [[ -n $(amixer get Master | grep 'Left:' | grep -o "\[off\]") ]] ; then volnoti-show -m -v; else amixer get Master | egrep -o "([0-9]+)%" | egrep -o "[0-9]+" | xargs -0 volnoti-show; fi"
+   XF86AudioMute
 
 # Brightness up
-"xbacklight -inc 10 && volnoti-show -s /usr/share/pixmaps/volnoti/display-brightness-symbolic.svg $(echo "`xrandr --verbose | grep -m 1 -i backlight | cut -f2 -d ' '` * 100 / 20" | bc) && pkill -RTMIN+17 i3blocks"
+"xbacklight -inc 5 && volnoti-show -s /usr/share/pixmaps/volnoti/display-brightness-symbolic.svg $(echo "`xrandr --verbose | grep -m 1 -i backlight | cut -f2 -d ' '` * 100 / 20" | bc) && pkill -RTMIN+17 i3blocks"
 XF86MonBrightnessUp
 
 # Brightness down
-"xbacklight -dec 10 && volnoti-show -s /usr/share/pixmaps/volnoti/display-brightness-symbolic.svg $(echo "`xrandr --verbose | grep -m 1 -i backlight | cut -f2 -d ' '` * 100 / 20" | bc) && pkill -RTMIN+17 i3blocks"
+"xbacklight -dec 5 && volnoti-show -s /usr/share/pixmaps/volnoti/display-brightness-symbolic.svg $(echo "`xrandr --verbose | grep -m 1 -i backlight | cut -f2 -d ' '` * 100 / 20" | bc) && pkill -RTMIN+17 i3blocks"
 XF86MonBrightnessDown
 
 # Display current battery
