--- a/.config/i3/config
+++ b/.config/i3/config
@@ -43,8 +43,8 @@ assign [class="Opera beta"] → $workspace3
 
 for_window [class="Thunar"] move to workspace $workspace4
 for_window [class="Spotify"] move to workspace $workspace10
-assign [class="Thunderbird"] → $workspace9
-      for_window [class="Thunderbird"] border none
+assign [class="Evolution"] → $workspace9
+      for_window [class="Evolution"] border none
 assign [class="Atom"] → $workspace5
 	for_window [class="Atom"] border none
 
