--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,7 +11,7 @@
 #####################################################
 set $workspace1 "1:"
 set $workspace2 "2:"
-set $workspace3 "3:"
+set $workspace3 "3:"
 set $workspace4 "4:"
 set $workspace5 "5:"
 set $workspace6 "6:"
@@ -23,7 +23,7 @@ set $mod Mod4
 ############################
 ##i3-gaps specific settings#
 ############################
-gaps inner 15
+gaps inner 5
 gaps outer 0
 smart_gaps on
 smart_borders on
@@ -40,6 +40,10 @@ assign [title="Steam"] → $workspace6
 
 assign [class="Opera beta"] → $workspace3
 	for_window [class="Opera beta"] border none
+
+assign [class="Google-chrome-unstable"] → $workspace3
+	for_window [class="Google-chrome-unstable"] border none
+
 
 for_window [class="Thunar"] move to workspace $workspace4
 for_window [class="Spotify"] move to workspace $workspace10
@@ -150,7 +154,7 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-font pango:Monofett.ttf 10.5
+font pango:SourceCodePro-Regular 10.5
 
 #########
 set $bgr #263238
@@ -168,7 +172,7 @@ bar {
   status_command i3blocks
   position top
 
-  font pango:Monofett.ttf 8
+  font pango:SourceCodePro-Regular 8
   strip_workspace_numbers yes
   colors {
    #statusline #7f8c8d
