--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,17 +1,19 @@
+full_text=〉
+align=center
+color=#272c2c
 separator=false
-separator_block_width=20
+separator_block_width=15
 border_top=0
 border_left=0
 border_right=0
 border_bottom=0
-
 
 [updates]
 command=$HOME/.scripts/updates.sh
 interval=1
 signal=2
 urgent=true
-border=#ff0000
+color=#ffffff
 
 [spotify]
 label=
@@ -19,12 +21,16 @@ command=echo $(playerctl metadata title) $(playerctl metadata artist)
 interval=5
 border=#000000
 
+
 [weater]
 instance=3081368
 command=$HOME/.scripts/weather.sh
 interval=60
 signal=10
+color=#ffffff
 border=#000000
+
+[separator]
 
 [brightness]
 command=$HOME/.scripts/brightness
@@ -32,6 +38,8 @@ label=
 interval=once
 signal=17
 border=#000000
+
+[separator]
 
 [volume]
 label=  
@@ -41,6 +49,8 @@ interval=once
 signal=1
 markup=pango
 border=#000000
+
+[separator]
 
 #[wireless]
 #label=  
@@ -55,11 +65,15 @@ markup=pango
 interval=1
 border=#000000
 
+[separator]
+
 [memory]
 label=
 command=$HOME/.scripts/memory.sh
 interval=1
 border=#000000
+
+[separator]
 
 [time]
 label= 
