Changed color scheme

--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,12 +1,11 @@
 full_text=〉
 align=center
-color=#272c2c
 separator=false
 separator_block_width=15
 border_top=0
 border_left=0
 border_right=0
-border_bottom=0
+border_bottom=1
 
 [updates]
 command=$HOME/.scripts/updates.sh
@@ -21,13 +20,13 @@ command=echo $(playerctl metadata title) $(playerctl metadata artist)
 interval=5
 border=#000000
 
+[separator]
 
 [weater]
 instance=3081368
 command=$HOME/.scripts/weather.sh
-interval=60
+interval=1
 signal=10
-color=#ffffff
 border=#000000
 
 [separator]
@@ -52,11 +51,13 @@ border=#000000
 
 [separator]
 
-#[wireless]
-#label=  
-#command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
-#interval=1
-#Yborder=#000000
+[wireless]
+label=  
+command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
+interval=1
+border=#000000
+
+[separator]
 
 [battery]
 label=
@@ -81,3 +82,5 @@ command=echo "`date +'%a %d %b'` <b>`date +'%T'`</b> "; [[ -z "${BLOCK_BUTTON}" 
 interval=1
 markup=pango
 border=#000000
+
+[separator]
