--- a/.config/i3/config
+++ b/.config/i3/config
@@ -156,18 +156,17 @@ mode "$mode_gaps_outer" {
 
 font pango: Sans Regular 11
 
-#########
-set $bgr #fdb100
-set $fgr #272c2c
-set $lightfgr #c08c0e
-set $focus #ffffff
+#########s
+set $bgr #000000
+set $fgr #ffffff
+set $lightfgr #c15f40
+set $focus #FFFF00
 set $red #ff4136
 #########
 bar {
   ############
   ##i3-gaps
   height 17
-  #i3bar_command i3bar -t
   ############
   status_command i3blocks
   position top
@@ -188,9 +187,9 @@ bar {
 
 ########################################################
 #colors:                border  backgr. text    indicator
-client.focused          $bgr $bgr $fgr $focus
-client.focused_inactive $bgr $bgr $fgr $focus
-client.unfocused        $bgr $bgr $lightfgr $lightfgr
+client.focused          $bgr $bgr $focus $focus
+client.focused_inactive $bgr $bgr $focus $focus
+client.unfocused        $bgr $bgr $fgr $fgr
 client.urgent           #E6EFF6 $focus $ff0000 $FFFFFF
 ########################################################
 
