--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -12,7 +12,7 @@
     XF86AudioLowerVolume
 
 # Toggle volume
-"amixer set Master toggle; if [[ -n $(amixer get Master | grep 'Left:' | grep -o "\[off\]") ]] ; then volnoti-show -m -v; else amixer get Master | egrep -o "([0-9]+)%" | egrep -o "[0-9]+" | xargs -0 volnoti-show; fi"
+"amixer set Master toggle; if [[ -n $(amixer get Master | grep 'Left:' | grep -o "\[off\]") ]] ; then volnoti-show -m -v; else amixer get Master | egrep -o "([0-9]+)%" | egrep -o "[0-9]+" | xargs -0 volnoti-show; fi && pkill -RTMIN+1 i3blocks"
    XF86AudioMute
 
 # Brightness up
