Changed few configs && shell to prezto

--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,7 +1,7 @@
-full_text=〉
+full_text=〈〈
 align=center
 separator=false
-separator_block_width=15
+separator_block_width=10
 border_top=0
 border_left=0
 border_right=0
