--- a/.config/i3/config
+++ b/.config/i3/config
@@ -47,11 +47,10 @@ assign [class="Google-chrome-unstable"] → $workspace3
 
 for_window [class="Thunar"] move to workspace $workspace4
 for_window [class="Spotify"] move to workspace $workspace10
-assign [class="Evolution"] → $workspace9
-      for_window [class="Evolution"] border none
+assign [class="wmail"] → $workspace9
+      for_window [class="wmail"] border none
 assign [class="Atom"] → $workspace5
 	for_window [class="Atom"] border none
-
 
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="bubble"] floating enable
@@ -82,6 +81,10 @@ exec --no-startup-id nm-applet
 exec --no-startup-id xbindkeys
 ##volnoti
 exec --no-startup-id volnoti
+##notification daemon
+exec --no-startup-id  /usr/lib/notification-daemon-1.0/notification-daemon
+##redshift
+exec --no-startup-id redshift-gtk
 
 ##backlight and volume
 bind Mod4+34 exec playerctl previous
